<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="25px"
    android:background="@color/white"
    android:id="@+id/ll_content"
    android:orientation="vertical">

    <!--已操作还款-->
    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/line" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:paddingRight="30px">

        <View
            android:layout_width="10px"
            android:layout_height="match_parent"
            android:background="@color/operationText" />

        <!--日期-->
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:text="2017-10-11 11:00"
            android:textColor="@color/operationText"
            android:textSize="24px" />

        <!--银行卡号-->
        <TextView
            android:id="@+id/tv_bankcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:layout_toRightOf="@+id/tv_date"
            android:text="666666****1111"
            android:textColor="@color/operationBlackText"
            android:textSize="24px" />


        <!--银行-->
        <TextView
            android:id="@+id/tv_bank"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:text="中国农业银行"
            android:textColor="@color/operationBlackText"
            android:textSize="24px" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15px"
        android:paddingRight="30px">

        <!--姓名-->
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:text="你是谁"
            android:textColor="@color/blueBackground"
            android:textSize="24px" />

        <View
            android:layout_width="230px"
            android:layout_height="3px"
            android:layout_centerInParent="true"
            android:background="@color/line" />

        <!--金额-->
        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="30px"
            android:text="@string/money"
            android:textColor="@color/operationText"
            android:textSize="24px" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:paddingRight="30px">

        <!--卡号-->
        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:text="@string/card_num"
            android:textColor="@color/blueBackground"
            android:textSize="24px" />


        <!--还款时间-->
        <TextView
            android:id="@+id/tv_date_repay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="30px"
            android:text="@string/date"
            android:textColor="@color/operationText"
            android:textSize="24px" />

    </RelativeLayout>
</LinearLayout>